# museOpenAI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  index.html  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
checkpoints/release/: summary.json  tokenizer.json
ci/: README.md  ci.yml
configs/: moe-small.json  tiny.json
docs/: ARCHITECTURE.md  MODEL_CARD.md  PROMOTION.md  RELEASE_PLAN.md  ROADMAP.md  TRAINING.md
docs/web/: index.html
examples/: library_usage.py
muselm/: __init__.py  cli.py  config.py  data.py  generate.py  model.py  tokenizer.py  train.py
scripts/: benchmark_inference.py  package_release.py  reproduce_tinyshakespeare.sh
tests/: test_benchmark.py  test_integration.py  test_model.py  test_tokenizer.py
